--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -9,11 +9,8 @@
   {% endfor %}
 </ul>
 
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+<a href="{% url 'polls:detail' pk=question.id order='Time' %}">Vote again?</a>
 
 <hr />
 
-{# added table part #} {% if votes %} {% include 'polls/includes/table.html'%}
-{% else %}
-<h3>There are no votes to be presented yet!</h3>
-{% endif %}
+{# added table part #} {% include 'polls/includes/table.html'%}
