--- a/mysite/polls/templates/polls/includes/table.html
+++ b/mysite/polls/templates/polls/includes/table.html
@@ -1,22 +1,3 @@
 {% if df %} {{df|safe}} {% else %}
 <h3>There are no votes to be presented yet!</h3>
-{% endif %} {%comment%}
-<table style="text-align: center">
-  <thead>
-    <tr>
-      <th>Time</th>
-      {% for choice in choices %}
-      <th>{{ choice }}</th>
-      {% endfor %}
-    </tr>
-  </thead>
-  {% for vote in votes %}
-  <tr>
-    {% for key, val in vote.items %}
-    <td>{{ val }}</td>
-
-    {% endfor %}
-  </tr>
-  {% endfor %}
-</table>
-{%endcomment%}
+{% endif %}
